fix mobile horizontal scrolling

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   overflow-x: hidden;
+}
+body {
+  position: relative;
 }
 
 .bg-image-home {
